k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      name: kuard
  template:
    metadata:
      labels:
        name: kuard
    spec:
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-amd64:blue
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 600Mi
              cpu: 200m
            limits:
              memory: 700Mi
              cpu: 400m
          readinessProbe:
            httpGet:
              port: 8080
              path: /ready
            periodSeconds: 2
            initialDelaySeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /healthy
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
