k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-canary
  namespace: kuard
spec:
  type: LoadBalancer
  selector:
    name: kuard
    track: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
