k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
spec:
  type: LoadBalancer
  selector:
    name: kuard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
